site/deploy/kubernetes/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: tcp-8080
  selector:
    run: website
  type: NodePort
